# create-poetry-app

./: .gitignore  2196431015.md  CHANGELOG.md  README.md  config.toml  create-poetry-app  create_poetry_app.py  create_poetry_app.sh  install.sh  uninstaller.sh
example/matrixworld/: pyproject.toml
tools/: generate_requirements.py
