[tool.poetry]
name = "singularity"
version = "0.1.0"
description = "Project Matrix Multiverse"
authors = ["aifirstd3v <aifirstd3v@33.universe>"]
readme = "README.md"
packages = [{include = "singularity", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.8,<3.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
