[tool.poetry]
name = "matrix"
version = "0.1.0"
description = "Matrix Multiverse Project"
authors = ["Smith Neo <admin@matrix.universe8.com>"]
readme = "README.md"
packages = [{include = "matrix", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.12,<3.33"
pandas = "^2.2.2"
numpy = ">=1.26.0,<3.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
